@@ -11,7 +11,6 @@ Depends:
     ggplot2 (>= 2.0.0)
 Imports:
     ape,
-    Biostrings,
     grDevices,
     grid,
     jsonlite,
@@ -21,12 +20,10 @@ Imports:
     tidyr,
     utils
 Suggests:
+    Biostrings,
     colorspace,
     EBImage,
     knitr,
-    phylobase,
-    phytools,
-    phangorn,
     rmarkdown,
     scales,
     testthat
