@@ -31,7 +31,6 @@ library("Biostrings")
 library("ape")
 library("ggplot2")
 library("ggtree")
-library("phangorn")
 ```
 
 
